--- a/index.html
+++ b/index.html
@@ -578,6 +578,7 @@
         margin: auto;
         max-width: 1000px;
         background-color: white;
+        padding: 15px;
     }
 
     html {
