--- a/index.html
+++ b/index.html
@@ -584,6 +584,17 @@
     html {
         background-color: grey;
     }
+
+    @media only screen and (max-width: 600px) {
+        .content {
+            display: block;
+        }
+
+        img {
+            margin-top: 10px;
+            width: 100%;
+        }
+    }
 </style>
 
 </html>
